<resources>
    <string name="app_name">TraSuaServer1</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SĐT : 094 420 30 11</string>
    <string name="nav_header_subtitle">Free ship từ 3 ly trong phạm vi 3Km</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_trangchu">Trang Chủ</string>
    <string name="menu_hoso">Hồ Sơ</string>
    <string name="menu_theloai">Thể Loại</string>
    <string name="menu_dangxuat">Đăng Xuất</string>
    <string name="menu_order">Order</string>
    <string name="menu_voucher">Voucher</string>
</resources>